@@ -324,7 +324,7 @@ table.activity a		{display:inline-block; padding:10px 20px; width:100%; color:#9
 table.activity a:focus	{color:#95B0CF; text-decoration:none;}
 table.activity a:link  	{color:#95B0CF; text-decoration:none;}
 table.activity a:visited{color:#95B0CF; text-decoration:none;}
-table.activity a:hover	{color:#fff; text-decoration:none; background-color:rgba(0,0,0,0.4);}
+table.activity tr:hover, table.activity a:hover	{color:#fff; text-decoration:none; background-color:rgba(0,0,0,0.4);}
 table.activity a:active	{color:#95B0CF; text-decoration:none;}
 
 
