@@ -42,7 +42,7 @@
 </div>
 
 #donor_transactions_data
-<tr>
+<tr onclick="window.location.hash='#view=act&aid={aid}';">
 	<td class="num">{num}.</td>
 	<td class="title" title="{project_title_tip_text}">
 		<a href="#view=act&aid={aid}">
