@@ -3,6 +3,8 @@ Development Portal (2014-08-06 shi)
 Linked "0" and "-" to description footer
 Remove links in tables
 Adjust padding in table columns
+Adding onclicks to table rows
+Add hover states to row links
 
 
 Dashboard (2014-08-05 shi)
